--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -77,6 +77,16 @@
 }
 
 @media screen and (max-width: 768px) {
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .logo {
+            display: block;
+        }
+    }
+
     .burger-menu {
         display: flex;
         justify-content: flex-end;
